# RobertsCross

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.quail/: build.bat  clear_builds.ps1  cmake_refresh.bat  exe_with_res.ps1
cmake/: properties.cmake
dependencies/: CMakeLists.txt
project/: CMakeLists.txt
project/inc/: cuda.hpp  debug.hpp  types.hpp
project/src/: main.cu
